# powerbi-mcp-designer

./: .gitignore  .mcp.json.example  LICENSE  MANIFEST.in  README.md  README_INSTALL.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: powerbi-modeling-mcp-interop.md  powerbi-report-design-studio-usage.md  powerbi-visual-generation-research-plan.md
example/: Focus.pbip
example/Focus.Report/: .platform  definition.pbir
example/Focus.Report/definition/: report.json
example/Focus.SemanticModel/: .platform  diagramLayout.json
example/Focus.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
powerbi_mcp/: __init__.py  cli.py  requirements.txt  server.py  smoke_test.py
powerbi_mcp/analysis/: __init__.py  bindings.py  impact.py
powerbi_mcp/common/: __init__.py  backups.py  io.py  paths.py  types.py
powerbi_mcp/interop/: __init__.py  powerbi_modeling_mcp.py
powerbi_mcp/model/: __init__.py  read.py  write.py
powerbi_mcp/report/: __init__.py  read.py  write.py
powerbi_mcp/tests/: _temp_roots.py  test_backups.py  test_binding_analysis.py  test_cli.py  test_common_paths.py  test_distribution.py  test_impact_analysis.py  test_interop_guidance.py  test_mcp_integration.py  test_model_read.py  test_model_write.py  test_pipeline.py  test_report_read.py  test_report_write.py  test_validation_engine.py  test_validation_pbir.py  test_validation_reachability.py  test_validation_report.py  test_validation_tmdl.py  test_visual_ai_catalog.py  test_visual_ai_compiler.py  test_visual_ai_critic.py  test_visual_ai_desktop_evidence.py  test_visual_ai_examples.py  test_visual_ai_improvements.py  test_visual_ai_layout.py  test_visual_ai_planner.py  test_visual_ai_qa_loop.py  test_visual_ai_readiness.py  test_visual_ai_rubric.py  test_visual_ai_screenshot_quality.py  test_visual_ai_studio.py  test_visual_ai_vocabulary.py  test_visual_ai_windows_capture.py  test_visual_ai_workbench.py  test_write_post_validation_restore.py
powerbi_mcp/validation/: engine.py  pbir.py  reachability.py  report.py  tmdl.py
powerbi_mcp/validation/schemas/: INDEX.json  fabric__gitIntegration__platformProperties__2.0.0__schema.json  fabric__item__report__definitionProperties__2.0.0__schema.json  fabric__item__report__definition__page__2.0.0__schema.json  fabric__item__report__definition__pagesMetadata__1.0.0__schema.json  fabric__item__report__definition__report__3.0.0__schema.json  fabric__item__report__definition__report__3.1.0__schema.json  fabric__item__report__definition__report__3.2.0__schema.json  fabric__item__report__definition__versionMetadata__1.0.0__schema.json  fabric__item__report__definition__visualContainer__2.0.0__schema.json  fabric__item__report__definition__visualContainer__2.4.0__schema.json  (+2 more)
powerbi_mcp/visual_ai/: __init__.py  catalog.py  compiler.py  critic.py  design_expert.py  desktop_evidence.py  examples.py  improvements.py  layout.py  pipeline.py  planner.py  qa_loop.py  readiness.py  rubric.py  screenshot_quality.py  studio.py  vocabulary.py  windows_capture.py  workbench.py
scripts/: check_distribution.py  powerbi_visual_qa_loop.py  refresh_pbir_schemas.py
(+177 files in other folders)
